# AI-Maturity-Platform

./: .env.example  .gitignore  README.md  TESTING.md  chat-export-1782395371788.json  create_many_audits.py  create_test_audits.py  diag.txt  generate_priority1.ps1  generate_scripts.py  restore_project.py  test-audit.json  testapi.json
backend/: Dockerfile  create_leads.py  diag.py  diagnose_baserow.py  pyproject.toml  pytest.ini  requirements — копия.txt  requirements.txt  run_tests.sh
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  cluster.py  descriptive.py  duckdb_service.py  factor_analysis.py  regression.py  reliability.py  report_generator.py  unified_service.py  visualization.py
backend/app/core/: __init__.py  audit_log.py  auth.py  config.py  deps.py  exceptions.py  rbac.py  security.py
backend/app/integrations/: __init__.py  baserow_client.py  keycloak_client.py
backend/app/models/: __init__.py  admin.py  audit.py  auth.py  common.py  schemas.py
backend/app/services/: __init__.py  admin_audit_service.py  analytics_service.py  audit_log_service.py  audit_service.py  baserow_service.py  benchmark_service.py  dashboard_service.py  email_service.py  export_service.py  lead_service.py  pattern_service.py  radar_service.py  settings_service.py
backend/app/storage/: __init__.py  json_storage.py  parquet_storage.py  s3_client.py
backend/app/templates/: audit_report.html
backend/scripts/: generate_demo_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_full_flow.py
backend/tests/test_models/: __init__.py  (+1 more)
(+110 files in other folders)
